<resources>
    <string name="app_name">Comidacafe</string>
    <string name="action_settings">Settings</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="chose_a_delivery_method">Chose a delivery method.</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="chosen">Chosen: </string>
    <string name="nothing_clicked">nothing_clicked</string>
    <string name="droid_dessert">Droid dessert</string>
    <string name="icecream">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="donut">Donuts are glazed and sprinkeld with candy.</string>
    <string name="froyo_is_premium_self_serve_frozen_yogurt">Froyo is premium self-serve frozen yogurt.</string>
</resources>
